2002-10-28  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.6

	* lib/yp_db.c: Make number of max. open file handles configureable.
	* lib/ypserv_conf.c: max. number of cached_filehandles is 255.
	* rpc.ypxfrd/ypxfrd.c: set cached_filehandles to 0 after loading
	config file, rpc.ypxfrd should not cache file handles.
	* ypserv/ypserv.c (sig_hup): Don't allow to decrease the max. number
	of cached file handles with SIGHUP.
	* etc/ypserv.conf.5: Add documentation about new files option.

	* makedbm/makedbm.c (create_file): If we find a <TAB> in a key,
	assume that <TAB> is the seperator between key and data.

2002-10-26  Thorsten Kukuk  <kukuk@suse.de>

	* rpc.ypxfrd/ypxfrd_server.c (ypxfrd_getmap_1_svc): Close file
	handle of database (we don't need it).
	Reported by Tsutomu Hoshino <hoshino@sic.shibaura-it.ac.jp>

2002-08-08  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.5

	* configure.in: Check for in_addr_t

2002-08-06  Thorsten Kukuk  <kukuk@suse.de>

	* yppush/yppush.8.in: Fix syntax error.

2002-08-06  Thorsten Kukuk  <kukuk@suse.de>

        * lib/yp_db.c (ypdb_open): Check if map exist before allocating
        memory for extra data.

        * lib/access.c (is_valid): If map does not exist, return -2,
        not success.

2002-07-23  Thorsten Kukuk  <kukuk@suse.de>

	* ypserv/server.c (ypproc_xfr_2_svc): Print also name of the
	expected master if we refuse to transfer a map.

2002-07-02  Thorsten Kukuk  <kukuk@suse.de>

	* rpc.ypxfrd/Makefile.in (rpc_ypxfrd_LDADD): link against libyp.a
	before linking against libgdbm.

	* ypserv/Makefile.in (rpc_ypxfrd_LDADD): Likewise.
	(Reported by Todd R. Eigenschink <todd@tekinteractive.com>)

002-05-27  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.4

	* scripts/ypMakefile.in (MINUID/MINGID): increase both variables
	to 500 as defined by LSB and to be compatible with most Linux
	distributions.

	* lib/ypserv.conf.5: move from here ...