@@ -1,11 +1,14 @@
 
 Things to do (in no particular order):
 
-	o Add cracklib to yppasswd and rpc.yppasswdd.
+	o Rework README
 
 	o ypmaplist needs to be fixed for Sun's NDBM
 
 	o IP numbers in ypserver file doesn't work
 
 	o Rewrite makedbm
+
+	o Cracklib support for rpc.yppasswdd? (rpasswdd should
+	  be used instead)
 
