@@ -1,0 +1,171 @@
+.\" -*- nroff -*-
+.TH YPSERV 8 "August 2001" "YP Server" "Reference Manual"
+.SH NAME
+ypserv \- NIS server
+.SH SYNOPSIS
+.B @SBINDIR@/ypserv
+[
+.B \-d
+[
+.B path
+] ]
+[
+.B \-p port
+]
+.LP
+.SH DESCRIPTION
+.IX  "ypserv"  ""  "\fLypserv\fP \(em NIS server process"
+.LP
+The
+Network Information Service (NIS)
+provides a simple network lookup service
+consisting of databases and processes.  The databases are
+.B gdbm
+files in a directory tree rooted at
+.BR @YPMAPDIR@ .
+.LP
+The
+.B ypserv
+daemon is typically activated at system startup.
+.B ypserv
+runs only on
+.SM NIS
+server machines with a complete
+.SM NIS
+database. On other machines using the
+.SM NIS
+services, you have to run
+.B ypbind
+as client or under Linux you could use the libc with
+.SM NYS
+support.
+.B ypbind
+must run on every machine which has
+.SM NIS
+client processes;
+.B ypserv
+may or may not be running on the same node,
+but must be running somewhere
+on the network. On startup or when receiving the signal SIGHUP,
+.B ypserv
+parses the file
+.B @sysconfdir@/ypserv.conf.
+.LP
+.SH OPTIONS
+.TP
+.B "\-d" "\--debug" "[path]"
+Causes the server to run in debugging mode. Normally,
+.B ypserv
+reports only errors (access violations, dbm failures)
+using the syslog(3) facility. In debug mode, the server does not
+background itself and prints extra status messages to stderr for
+each request that it revceives.
+.B path
+is an optionally parameter.
+.B ypserv
+is using this directory instead of @YPMAPDIR@
+.TP
+.B "\-p" "--port"  port
+.B ypserv
+will bind itself to this port.
+This makes it possible to have a router filter packets
+to the NIS ports, so that access to the NIS server from
+hosts on the Internet can be restricted.
+.TP
+.B "\-v" "\--version"
+Prints the version number
+.SH SECURITY
+In general, any remote user can issue an RPC to
+.B ypserv
+and retrieve the contents of your NIS maps, if he knows your
+domain name. To prevent such unauthorized transactions,
+.B ypserv
+supports a feature called
+.B securenets
+which can be used to restrict access to a given set of hosts.
+At startup or when arriving the SIGHUP Signal,
+.B ypserv
+will attempt to load the securenets information from a file
+called
+.B @YPMAPDIR@/securenets .
+This file contains entries that consist of a netmask
+and a network pair separated by white spaces.
+Lines starting with ``#'' are considered to be comments.
+.TP
+A sample securenets file might look like this:
+
+# allow connections from local host -- necessary
+.br
+host 127.0.0.1
+.br
+# same as 255.255.255.255 127.0.0.1
+.br
+#
+.br
+# allow connections from any host
+.br
+# on the 131.234.223.0 network
+.br
+255.255.255.0   131.234.223.0
+.br
+# allow connections from any host
+.br
+# between 131.234.214.0 and 131.234.215.255
+.br
+255.255.254.0   131.234.214.0
+.LP
+If
+.B ypserv
+receives a request from an address that fails to match a rule,
+the request will be ignored and a warning message will be
+logged. If the
+.B @YPMAPDIR@/securenets
+file does not exist,
+.B ypserv
+will allow connections from any host.
+.LP
+In the
+.B @sysconfdir@/ypserv.conf
+you could specify some access rules for special maps and hosts. But
+it is not very secure, it makes the life only a little bit harder
+for a potential hacker. If a mapname doesn't match a rule, ypserv will
+look for the YP_SECURE key in the map. If it exists, ypserv will
+only allow requests on a reserved port.
+
+For security reasons, ypserv will only accept ypproc_xfr requests for
+updating maps from the same master server as the old one. This means,
+you have to reinstall the slave servers if you change the master server
+for a map.
+.SH FILES
+@sysconfdir@/ypserv.conf
+@YPMAPDIR@/securenets
+.SH "SEE ALSO"
+.BR domainname (1),
+.BR ypcat (1),
+.BR ypmatch (1),
+.BR ypserv.conf (5),
+.BR netgroup (5),
+.BR makedbm (8),
+.BR revnetgroup (8),
+.BR ypinit (8),
+.BR yppoll (8),
+.BR yppush (8),
+.BR ypset (8),
+.BR ypwhich (8),
+.BR ypxfr (8),
+.BR rpc.ypxfrd (8)
+.LP
+The Network Information Service
+(\s-1NIS\s0)
+was formerly known as Sun Yellow Pages
+(\s-1YP\s0).
+The functionality of the two remains the same;
+only the name has changed.
+The name Yellow Pages is a registered trademark in the United Kingdom
+of British Telecommunications plc,
+and may not be used without permission.
+.SH AUTHOR
+.B ypserv
+was written by Peter Eriksson <pen@lysator.liu.se>.
+Thorsten Kukuk <kukuk@suse.de> added support for master/slave
+server and is the new Maintainer.
