@@ -1,3 +1,7 @@
+2003-01-17  Thorsten Kukuk  <kukuk@suse.de>
+
+	* ypserv/ypserv.8.in: Remove -b/--dns option
+
 2002-10-28  Thorsten Kukuk  <kukuk@suse.de>
 
 	* release version 2.6
